tests/rosetta/out/Zig/catalan-numbers-pascals-triangle.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencatalan-numbers-pascals-triangle3876594783/001/prog.zig:13:28: error: type '[]i32' does not support array initialization syntax
/tmp/TestMochiZigGoldencatalan-numbers-pascals-triangle3876594783/001/prog.zig:13:28: note: inferred array length is specified with an underscore: '[_]i32'
